--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ logback-version = "1.4.14"
 auth0 = "4.4.0"
 kmongo = "4.10.0"
 mindrot = "0.4"
+dotenv = "6.4.1"
 
 [libraries]
 ktor-server-core = { module = "io.ktor:ktor-server-core", version.ref = "ktor-version" }
@@ -20,6 +21,8 @@ kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version
 kmongo-coroutine = { module = "org.litote.kmongo:kmongo-coroutine", version.ref = "kmongo" }
 java-jwt = { module = "com.auth0:java-jwt", version.ref = "auth0" }
 jbcrypt = { module = "org.mindrot:jbcrypt", version.ref = "mindrot" }
+dotenv-kotlin = { module = "io.github.cdimascio:dotenv-kotlin", version.ref = "dotenv" }
+
 
 
 [plugins]
