--- a/src/main/resources/.env
+++ b/src/main/resources/.env
@@ -1,3 +1,3 @@
-MONGODB_USER=ofekamirav
-MONGODB_PASSWORD=Of140398
+MONGODB_USER=zurshani
+MONGODB_PASSWORD=ZS1998
 MONGODB_CLUSTER=cluster0.sedqoku.mongodb.net
