update server running

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,9 +22,15 @@ kmongo-coroutine = { module = "org.litote.kmongo:kmongo-coroutine", version.ref 
 java-jwt = { module = "com.auth0:java-jwt", version.ref = "auth0" }
 jbcrypt = { module = "org.mindrot:jbcrypt", version.ref = "mindrot" }
 dotenv-kotlin = { module = "io.github.cdimascio:dotenv-kotlin", version.ref = "dotenv" }
+ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor-version" }
+ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor-version" }
+ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor-version" }
+ktor-client-serialization = { module = "io.ktor:ktor-client-serialization", version.ref = "ktor-version" }
+ktor-client-json = { module = "io.ktor:ktor-client-json", version.ref = "ktor-version" }
 
 
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin-version" }
 ktor = { id = "io.ktor.plugin", version.ref = "ktor-version" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin-version" }
