--- a/src/main/resources/.env
+++ b/src/main/resources/.env
@@ -1,4 +1,4 @@
-MONGODB_USER=barkobi
-MONGODB_PASSWORD=2004
+MONGODB_USER=nitzannaveh
+MONGODB_PASSWORD=Nathanberg123
 MONGODB_CLUSTER=cluster0.sedqoku.mongodb.net
 GEMINI_API_KEY=AIzaSyBRRmi-XqSBbLixnD-cHLAZQOmsQ3zlSuk
