--- a/src/main/resources/.env
+++ b/src/main/resources/.env
@@ -1,3 +1,4 @@
 MONGODB_USER=nitzannaveh
 MONGODB_PASSWORD=Nathanberg123
 MONGODB_CLUSTER=cluster0.sedqoku.mongodb.net
+GEMINI_API_KEY=AIzaSyBRRmi-XqSBbLixnD-cHLAZQOmsQ3zlSuk
