added matchWeights, updated default weights

--- a/src/main/resources/openapi/documentation.yaml
+++ b/src/main/resources/openapi/documentation.yaml
@@ -321,18 +321,41 @@ components:
 
     LookingForRoomiesPreference:
       type: object
-      description: "Represents a roommate preference with an optional dealbreaker flag."
+      description: "Represents a roommate preference with an optional weight + set weight flag."
       required:
         - attribute
-        - isDealbreaker
+        - weight
+        - setWeight
       properties:
         attribute:
           type: string
           enum: [ SMOKER, STUDENT, PET_LOVER, PET_OWNER, VEGETARIAN, CLEAN, NIGHT_WORKER, IN_RELATIONSHIP, KOSHER, JEWISH, MUSLIM, CHRISTIAN, REMOTE_WORKER, ATHEIST, QUIET ]
           example: "QUIET"
-        isDealbreaker:
+        weight:
+          type: number
+          example: 0.0
+        setWeight:
           type: boolean
-          example: true
+          example: false
+
+    LookingForCondoPreference:
+      type: object
+      description: "Represents a roommate condo preference with an optional weight + set weight flag."
+      required:
+        - preference
+        - weight
+        - setWeight
+      properties:
+        preference:
+          type: string
+          enum: [ BALCONY, ELEVATOR, PET_ALLOWED, SHELTER, FURNISHED, PARKING ]
+          example: "BALCONY"
+        weight:
+          type: number
+          example: 0.0
+        setWeight:
+          type: boolean
+          example: false
 
     RoommateUser:
       type: object
@@ -346,15 +369,16 @@ components:
         - attributes
         - hobbies
         - lookingForRoomies
+        - lookingForCondo
         - roommatesNumber
         - minPropertySize
         - maxPropertySize
         - minPrice
         - maxPrice
-        - condoPreference
         - email
         - password
         - profilePicture
+        - personalBio
       properties:
         fullName:
           type: string
@@ -390,11 +414,25 @@ components:
             $ref: "#/components/schemas/LookingForRoomiesPreference"
           example:
             - attribute: "QUIET"
-              isDealbreaker: true
+              weight: 0.75
+              setWeight: true
             - attribute: "NIGHT_WORKER"
-              isDealbreaker: false
+              weight: 0.5
+              setWeight: true
             - attribute: "JEWISH"
-              isDealbreaker: false
+              weight: 0.25
+              setWeight: true
+        lookingForCondo:
+          type: array
+          items:
+            $ref: "#/components/schemas/LookingForCondoPreference"
+          example:
+            - preference: "ELEVATOR"
+              weight: 0.5
+              setWeight: true
+            - preference: "PARKING"
+              weight: 0.5
+              setWeight: true
         roommatesNumber:
           type: integer
           example: 2
@@ -410,12 +448,6 @@ components:
         maxPrice:
           type: integer
           example: 8000
-        condoPreference:
-          type: array
-          items:
-            type: string
-            enum: [BALCONY, ELEVATOR, PET_ALLOWED, SHELTER, FURNISHED, PARKING]
-          example: ["BALCONY", "ELEVATOR"]
         email:
           type: string
           example: "ofek@gmail.com"
@@ -426,6 +458,9 @@ components:
           type: string
           nullable: true
           example: "https://example.com/profile.jpg"
+        personalBio:
+          type: string
+          example: "Hi, I'm Ofek, a software developer who loves gaming and sports! I'm looking for a chill roommate who respects shared spaces."
 
     BioRequest:
       type: object
