--- a/src/main/resources/openapi/documentation.yaml
+++ b/src/main/resources/openapi/documentation.yaml
@@ -379,6 +379,9 @@ components:
         - password
         - profilePicture
         - personalBio
+        - preferredRadiusKm
+        - latitude
+        - longitude
       properties:
         fullName:
           type: string
@@ -461,6 +464,15 @@ components:
         personalBio:
           type: string
           example: "Hi, I'm Ofek, a software developer who loves gaming and sports! I'm looking for a chill roommate who respects shared spaces."
+        preferredRadiusKm:
+          type: integer
+          example: 10
+        latitude:
+          type: number
+          example: 32.0853
+        longitude:
+          type: number
+          example: 34.7818
 
     BioRequest:
       type: object
@@ -541,6 +553,8 @@ components:
         - available
         - type
         - address
+        - latitude
+        - longitude
         - title
         - canContainRoommates
         - roomsNumber
@@ -561,6 +575,12 @@ components:
         address:
           type: string
           example: "123 Main St, Tel Aviv"
+        latitude:
+            type: number
+            example: 32.0853
+        longitude:
+            type: number
+            example: 34.7818
         title:
           type: string
           example: "Luxury Apartment"
@@ -593,9 +613,6 @@ components:
           items:
             type: string
           example: ["https://example.com/image1.jpg", "https://example.com/image2.jpg"]
-
-
-
 
 servers:
   - url: http://localhost:8080
